[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bear-django-request-utils"
version = "0.2.0"
authors = [
  { name = "Bohdan Riabunets", email = "bearablyk@gmail.com" },
]
description = "A core utility library for normalizing Django request data."
readme = "README.md"

license = "MIT"
requires-python = ">=3.8"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
   "Framework :: Django",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/bearablyk/django-request-utils"
Issues = "https://github.com/bearablyk/django-request-utils/issues"

